fixed dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -84,6 +84,6 @@ button:focus-visible {
     background-color: #191919;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #191919;
   }
 }
